<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@color/gris_firebase">

    <ImageView
        android:id="@+id/logo1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/primary_vertical_lockup_full_color_inverted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/datosTXT"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo1">

        <TextView
            android:id="@+id/emailTxtV"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@drawable/border_design"
            android:gravity="fill_vertical"
            android:hint="@string/email"
            android:paddingStart="@dimen/_8dp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/providerTxtV"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/border_design"
            android:gravity="fill_vertical"
            android:hint="@string/provider"
            android:textSize="24sp"
            android:paddingStart="8dp"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logOut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border_design"
        android:backgroundTintMode="add"
        android:text="@string/logout"
        android:textSize="24sp"
        app:backgroundTint="@color/firebase_naranja"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datosTXT"
        android:layout_marginTop="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>